--- a/overlay/SpesSystemUIOverlay/res/values/config.xml
+++ b/overlay/SpesSystemUIOverlay/res/values/config.xml
@@ -100,4 +100,6 @@
     <!-- Whether show refresh rate QS tile -->
     <bool name="config_showRefreshRateQsTile">true</bool>
 
+     <!-- Whether to play turbulence noise after clicking the play button -->
+    <bool name="config_turbulenceNoise">false</bool>
 </resources>
