spes: Enable zram writeback
Bug: 128889899
Test: Boot to home

Change-Id: I48ae06e54a66a7d6965afbe8db3d2f157cf8a1f4

--- a/overlay/SpesFrameworksOverlay/res/values/config.xml
+++ b/overlay/SpesFrameworksOverlay/res/values/config.xml
@@ -796,4 +796,8 @@
     
     <!-- Type of the tap sensor. Empty if tap is not supported. -->
     <string name="config_dozeTapSensorType" translatable="false">org.lineageos.sensor.single_tap</string>
+
+    <!-- Enable Zram writeback feature to allow unused pages in zram be written to flash. -->
+    <bool name="config_zramWriteback">true</bool>
+
 </resources>
