--- a/overlay/SpesFrameworksOverlay/res/values/dimens.xml
+++ b/overlay/SpesFrameworksOverlay/res/values/dimens.xml
@@ -18,11 +18,10 @@
 */
 -->
 <resources>
-
     <!-- Height of the status bar.
          Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
          -->
-    <dimen name="status_bar_height_default">93.0px</dimen>
+    <dimen name="status_bar_height_default">28dp</dimen>
 
     <!-- Height of the status bar in portrait -->
     <dimen name="status_bar_height_portrait">93.0px</dimen>
@@ -32,8 +31,11 @@
 
     <!-- Default radius of the software rounded corners. -->
     <dimen name="rounded_corner_radius">106.0px</dimen>
+    <dimen name="rounded_corner_radius_adjustment">5px</dimen>
     <dimen name="rounded_corner_radius_bottom">106.0px</dimen>
+    <dimen name="rounded_corner_radius_bottom_adjustment">4px</dimen>
     <dimen name="rounded_corner_radius_top">106.0px</dimen>
+    <dimen name="rounded_corner_radius_top_adjustment">5px</dimen>
 
     <!-- Default paddings for content around the corners. -->
     <dimen name="rounded_corner_content_padding">47.0px</dimen>
